--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "12.x"
